--- a/src/Tierlist.css
+++ b/src/Tierlist.css
@@ -22,9 +22,9 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  overflow-wrap: anywhere;
 }
 
 .tier-title {
-  font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
